# bluesky-trends

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  VERIFY.md  conftest.py  docker-compose.dev.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: reviewer.md
.claude/hooks/: format.sh
.claude/memory/: defects.md  standards.md  tech-stack.md
.claude/outputs/stepA-verify/: notes.md
.claude/outputs/stepB-clickhouse/: plan.md
.claude/outputs/stepB-verify/: notes.md
.claude/outputs/stepC-verify/: notes.md
.claude/outputs/v1-reconcile/: audit.md  plan-v1-phase1.md
.claude/skills/flink-job/: SKILL.md
.claude/skills/new-asset/: SKILL.md
clickhouse/config/config.d/: kafka.xml
clickhouse/config/users.d/: avro_sr.xml  dev_default_user.xml
clickhouse/init/: 001_posts.sql  002_v2_landing.sql  003_v2_landing_likes_follows.sql
dagster/bsky_dagster/: __init__.py  checks.py  config.py  definitions.py  dlq.py
dagster/bsky_dagster/assets/: bronze.py  bronze_follows.py  bronze_likes.py  dbt.py  landing.py  landing_follows.py  landing_likes.py
dagster/bsky_dagster/resources/: clickhouse.py  iceberg.py  kafka.py
dagster/bsky_dagster/transforms/: batch.py  batch_follows.py  batch_likes.py  bronze_schema.py  bronze_schema_follows.py  bronze_schema_likes.py  decode.py  decode_follows.py  decode_likes.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: _marts.yml  mart_follows_by_subject_daily.sql  mart_likes_by_subject_daily.sql  mart_posts_by_lang_daily.sql
dbt/models/staging/: _staging.yml  stg_follows.sql  stg_likes.sql  stg_posts.sql
dbt/tests/: assert_mart_follows_subject_daily_unique.sql  assert_mart_lang_daily_unique.sql  assert_mart_likes_subject_daily_unique.sql  assert_stg_follows_unique.sql  assert_stg_likes_unique.sql  assert_stg_posts_unique.sql
grafana/dashboards/: posts.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: clickhouse.yml
ingest/: config.py  cursor_store.py  dev_inject_dlq.py  jetstream_client.py  main.py  metrics.py  parse.py  producer.py
ingest/sql/: 001_init.sql
schemas/: models.py
schemas/avro/: bsky.dlq.v1.avsc  bsky.follows.v1.avsc  bsky.likes.v1.avsc  bsky.posts.v1.avsc
src/: main.py
tests/: conftest.py  test_avro_roundtrip.py  test_checkpointer.py  test_consume_loop.py  test_cursor_store.py  test_jetstream_client.py  test_parse.py  test_producer_enqueue.py
tests/fixtures/: follow_event.json  like_event.json  malformed_post_event.json  post_event.json
tests/v2/: conftest.py  test_batch.py  test_batch_follows.py  test_batch_likes.py  test_bronze_schema.py  test_bronze_schema_follows.py  test_bronze_schema_likes.py  test_decode.py  test_decode_follows.py  test_decode_likes.py
