[project]
name = "bluesky-trends"
version = "0.1.0"
description = "Real-time streaming from atproto firehose websocket"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "confluent-kafka[avro,schemaregistry]>=2.6.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "websockets>=13.1",
]

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.30.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]
# v2 batch layer (Iceberg/Dagster/dbt). Kept OUT of the `dev` group and the ingest Docker
# image (which installs with `--no-dev`) so the v1 ingest service stays lean. Install with
# `uv sync --group v2` for local v2 work.
v2 = [
    "dagster>=1.9,<1.10",
    "dagster-dbt>=0.25,<0.26",
    "dbt-core>=1.9,<1.10",
    "dbt-clickhouse>=1.9,<1.10",
    "pyiceberg[s3fs,pyarrow]>=0.7",
    "clickhouse-connect>=0.8",
    "pyarrow>=17",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
files = ["ingest", "schemas", "tests", "dagster/bsky_dagster"]
# `dagster/` is a source ROOT, not a package — it holds the `bsky_dagster` package so the
# folder name never shadows the `dagster` pip import. mypy_path lets `import bsky_dagster`
# resolve; there is no `dagster/__init__.py`.
mypy_path = "dagster"

# Third-party libs without bundled type stubs.
[[tool.mypy.overrides]]
module = ["dagster.*", "dagster_dbt.*", "pyiceberg.*", "clickhouse_connect.*", "pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["dagster"]
